<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RMRolling</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="roll_label">Roll</string>
    <string name="ob_label">OB</string>
    <string name="db_label">DB</string>
    <string name="mod_label">Mod</string>
    <string name="result_label">Result</string>
    <string name="zero">0</string>
    <string name="hundred">100</string>
    <string name="blank"/>
    <string name="skill_rolling">Skill rolling</string>
    <string name="stat_potentials">Statistics potentials</string>
    <string name="stat_bonus">Statistics bonuses</string>
    <string name="new_stats">New statistics</string>
    <string name="current">Current value</string>
    <string name="impr_roll">Improvement roll</string>
    <string name="new_value">New value</string>
    <string name="bonus">Bonus</string>
    <string name="dev_points">Dev. points</string>
    <string name="power_points">Power points</string>
    <string name="potential">Potential</string>
    <string name="init_value">Initial value</string>
    <string name="pot_roll">Potential roll</string>
    <string name="potential_value">Potential value</string>
    <string name="app_description">Help for RoleMaster</string>

</resources>