<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <Button
            android:id="@+id/rolling_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/skill_rolling" />

        <Button
            android:id="@+id/stat_potentials"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_stats" />

        <Button
            android:id="@+id/stat_bonus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/stat_bonus" />

    </LinearLayout>

</LinearLayout>